--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,27 @@
   border:4px solid green;
   background: blue 10px;
   margin:4px;
+  padding: 10px;
 }
 
 #memeTwo{
-  width:140px;
+ width:140px;
   height:160px;
   
-  border:4px solid green;
+  border:6px solid red;
+  background: green 10px;
+  margin:4px;
+  padding: 10px;
 }
 
 #memeThree{
   width:140px;
   height:160px;
   
-  border:4px solid green;
-}
-}
-  
+  border:8px solid yellow;
+  background: red 10px;
+  margin:4px;
+  padding: 10px;
 }
 
 #body {
